--- a/atom/styles.less
+++ b/atom/styles.less
@@ -17,16 +17,16 @@
 
 // style the background color of the tree view
 .tree-view {
-  // background-color: whitesmoke;
+   background-color: black;
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
 atom-text-editor {
-  // color: white;
+   color: white;
   // background-color: hsl(180, 24%, 12%);
 }
 
 // style UI elements inside atom-text-editor
 atom-text-editor .cursor {
-  // border-color: red;
+   border-color: red;
 }
